--- a/ui/style.css
+++ b/ui/style.css
@@ -19,4 +19,10 @@ body {
 .img-medium {
     height: 200px;
 }
-
+.container
+ {
+            padding-left:40px;
+            padding-right:40px;
+            padding-top:90px;
+            color:red;
+}
